# SFU

./: .gitignore  CMakeLists.txt  README.md  test-client.html
app/: CMakeLists.txt  main.cpp
cli/: CMakeLists.txt
cli/include/: cli.hpp
cli/src/: cli.cpp
server/: CMakeLists.txt
server/include/: server.hpp
server/src/: server.cpp
